FIxing image display on mobile to be full width

--- a/css/rgbeats.css
+++ b/css/rgbeats.css
@@ -126,6 +126,7 @@ hr {
     .bot-images {margin-top: 20px;}
     .right-images {margin-top: 20px;}
 	.mid-images {margin-top: 20px;}
+    #proj-content img {min-width: 100%;}
 }
 
 /* Mobile landscape */
@@ -136,6 +137,7 @@ hr {
     .bot-images {margin-top: 20px;}
     .right-images {margin-top: 20px;}
 	.mid-images {margin-top: 20px;}
+    #proj-content img {min-width: 100%;}
 }
 
 /* Tablet and desktop */
