--- a/css/sleepapp.css
+++ b/css/sleepapp.css
@@ -132,6 +132,7 @@ hr {
     .bot-images {margin-top: 20px;}
     .right-images {margin-top: 20px;}
 	.mid-images {margin-top: 20px;}
+    #proj-content img {min-width: 100%;}
 }
 
 /* Mobile landscape */
@@ -142,6 +143,7 @@ hr {
     .bot-images {margin-top: 20px;}
     .right-images {margin-top: 20px;}
 	.mid-images {margin-top: 20px;}
+    #proj-content img {min-width: 100%;}
 }
 
 /* Tablet and desktop */
