--- a/css/tcingc.css
+++ b/css/tcingc.css
@@ -134,6 +134,7 @@ hr {
 	.bot-images {margin-top: 20px;}
 	.right-images {margin-top: 20px;}
 	.mid-images {margin-top: 20px;}
+    #proj-content img {min-width: 100%;}
 }
 
 /* Mobile landscape */
@@ -144,6 +145,7 @@ hr {
 	.bot-images {margin-top: 20px;}
 	.right-images {margin-top: 20px;}
 	.mid-images {margin-top: 20px;}
+    #proj-content img {min-width: 100%;}
 }
 
 /* Tablet and desktop */
